[gd_scene load_steps=4 format=3 uid="uid://1db2bhwdf507"]

[ext_resource type="Script" uid="uid://b3b5nflhxypfj" path="res://scripts/ui/MainMenu.gd" id="1_mainmenu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.164706, 0.121569, 0.101961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.545098, 0.411765, 0.309804, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.227451, 0.145098, 0.0941176, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.843137, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mainmenu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -400.0
offset_right = 300.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleSection" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TopDiamond" type="Label" parent="CenterContainer/TitleSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.541176, 0.168627, 0.886275, 1)
theme_override_font_sizes/font_size = 20
text = "◆"
horizontal_alignment = 1

[node name="Title" type="Label" parent="CenterContainer/TitleSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.956863, 0.909804, 0.847059, 1)
theme_override_font_sizes/font_size = 96
text = "GLYPHIC"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer/TitleSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.7, 1)
theme_override_font_sizes/font_size = 28
text = "A Translation Mystery"
horizontal_alignment = 1

[node name="BottomDiamond" type="Label" parent="CenterContainer/TitleSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.541176, 0.168627, 0.886275, 1)
theme_override_font_sizes/font_size = 20
text = "◆"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="ButtonContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="NewGameButton" type="Button" parent="CenterContainer/ButtonContainer"]
custom_minimum_size = Vector2(380, 70)
layout_mode = 2
theme_override_colors/font_color = Color(0.956863, 0.909804, 0.847059, 1)
theme_override_colors/font_hover_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "✦  New Game"

[node name="ContinueButton" type="Button" parent="CenterContainer/ButtonContainer"]
custom_minimum_size = Vector2(380, 70)
layout_mode = 2
theme_override_colors/font_color = Color(0.956863, 0.909804, 0.847059, 1)
theme_override_colors/font_hover_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
disabled = true
text = "⊕  Continue"

[node name="SettingsButton" type="Button" parent="CenterContainer/ButtonContainer"]
custom_minimum_size = Vector2(380, 70)
layout_mode = 2
theme_override_colors/font_color = Color(0.956863, 0.909804, 0.847059, 1)
theme_override_colors/font_hover_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "⚙  Settings"

[node name="CreditsButton" type="Button" parent="CenterContainer/ButtonContainer"]
custom_minimum_size = Vector2(380, 70)
layout_mode = 2
theme_override_colors/font_color = Color(0.956863, 0.909804, 0.847059, 1)
theme_override_colors/font_hover_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "◆  Credits"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -40.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.5, 0.45, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "Prototype v0.1"
horizontal_alignment = 2

[connection signal="pressed" from="CenterContainer/ButtonContainer/NewGameButton" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="CenterContainer/ButtonContainer/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CenterContainer/ButtonContainer/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/ButtonContainer/CreditsButton" to="." method="_on_credits_pressed"]
